--- a/neumatica.html
+++ b/neumatica.html
@@ -44,14 +44,14 @@
   <aside>
     <h4 id="catalogo">Catalogo</h4>
     <ul >
-      <li><a href="#titulo1">1. NEUMATICA Y COMPONENTES DE VACIO </a></li>
-      <li><a href="#titulo2">2. HIDRAULICA </a></li>
-      <li><a href="#titulo3">3. EQUIPOS DE CONTROL Y  AUTOMATIZACION </a></li>
-      <li><a href="#titulo4">4. SENSORES Y DISPOSITIVOS DE  SEGURIDAD </a></li>
-      <li><a href="#titulo5">5. EQUIPOS DE CONTROL Y AUTOMATIZACION </a></li>
-      <li><a href="#titulo6">6. VÁLVULAS MECÁNICAS </li>
-      <li><a href="#titulo7">7. INSTRUMENTACION Y CALIBRACION DE  EQUIPOS </a></li>
-      <li><a href="#titulo8">8. SERVICIOS DE MANTENIMIENTO PREVENTIVO Y  CORRECTIVO </a></li>
+      <li><a href="neumatica.html">1. NEUMATICA Y COMPONENTES DE VACIO </a></li>
+      <li><a href="hidraulica.html">2. HIDRAULICA </a></li>
+      <li><a href="equipos.html">3. EQUIPOS DE CONTROL Y  AUTOMATIZACION </a></li>
+      <li><a href="sensores.html">4. SENSORES Y DISPOSITIVOS DE  SEGURIDAD </a></li>
+      <li><a href="servicios.html">5. EQUIPOS DE CONTROL Y AUTOMATIZACION </a></li>
+      <li><a href="valvulas.html">6. VÁLVULAS MECÁNICAS </li>
+      <li><a href="calibracion.html">7. INSTRUMENTACION Y CALIBRACION DE  EQUIPOS </a></li>
+      <li><a href="mantenimiento.html">8. SERVICIOS DE MANTENIMIENTO PREVENTIVO Y  CORRECTIVO </a></li>
     </ul>
   </aside>
   <footer>
